# fufx

./: .gitignore  Dockerfile  README.md  bun.lockb  fly.toml  hello.py  package.json  pyproject.toml
crawler/: __init__.py  govinfo.py
playground/: firecrawl_prompt.py  resend_sandbox.py
scripts/: backfill_embeddings.py  extract.py  generate_pro_summaries.py  send_digest.py  send_pro_digest.py  sync.py  sync_pro_digests.py
server/: app.py
supabase/: __init__.py  sync.py
supabase/.temp/: pooler-url  project-ref
supabase/functions/generate-embedding/: index.ts
supabase/functions/onboard/: index.ts
supabase/functions/onboard-pro/: index.ts
supabase/functions/semantic-search/: index.ts
supabase/migrations/: 20260131000000_create_documents.sql  20260131010000_create_extractions.sql  20260131014000_relevance_single_value.sql  20260131020000_create_subscriptions.sql  20260131023000_update_sector_enum.sql  20260131213111_update_privacy_constraints.sql  20260131214000_relevance_single_value.sql  20260131220000_add_embeddings.sql  20260131230000_fix_embedding_dimension.sql  20260131240000_create_pro_tables.sql  20260131250000_fix_subscriptions_pro_rls.sql  20260131250001_fix_subscriptions_pro_rls_bis.sql  20260131260000_default_verified_subscriptions.sql
supabase_sync/: sync.py
url_crawler/: pyproject.toml
