[project]
name = "fufx"
version = "0.1.0"
description = "GovInfo daily document crawler with Supabase sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "resend>=2.21.0",
    "firecrawl-py>=4.14.0",
    "mistune>=3.0.0",
    "premailer>=3.10.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
fufx-crawl = "crawler.govinfo:main"
fufx-sync = "supabase.sync:main"

